# TinyDB

./: .clang-format  .gitignore  CMakeLists.txt  README.md  debug_comment.sql  debug_empty.sql  debug_join.sql  debug_simple_select.sql  debug_step.sql  debug_tables.sql  main.cpp  report.md  simple_test.sql  test_join.txt  test_sql.txt
docs/: database.md  project_design.md
examples/: demo_no_comments.sql  demo_with_semicolons.sql  sample_queries.sql
libcore/database/: condition.cpp  condition.hpp  database.cpp  database.hpp  persistence.cpp  persistence.hpp  table.cpp  table.hpp  value.cpp  value.hpp
libcore/sql/: ast.cpp  ast.hpp  ast_simple.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
scripts/: build.ps1  build_clean.ps1  format_code.ps1  test.ps1
tests/: catch.hpp  catch2_tests.cpp  test_condition.cpp  test_database.cpp  test_join.cpp  test_lexer.cpp  test_parser.cpp  test_simple.cpp  test_table.cpp  test_value.cpp
